--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "action-test-test",
-  "version": "4.2.1",
+  "version": "4.3.1",
   "description": "AnupamAS01",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-docs": "echo 'attacker controlled code'"
+    "build-docs": "echo 'AnupamAS01'"
   },
   "author": "",
   "license": "ISC",
