--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "action-test-test",
+  "name": "action-test-test-test-test",
   "version": "4.3.1",
   "description": "AnupamAS01",
   "main": "index.js",
