--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-docs": "echo 'AnupamAS01'"
+    "build-docs": "echo 'this is takeover'"
   },
   "author": "",
   "license": "ISC",
